<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_outline_test"
        android:title="@string/home"/>

    <item
        android:id="@+id/gameFragment"
        android:icon="@drawable/ic_outline_test"
        android:title="@string/game"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_outline_test"
        android:title="@string/search"/>

    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_outline_test"
        android:title="@string/statistics"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_outline_test"
        android:title="@string/profile"/>
</menu>