<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".core.presentation.fragments.details.TrackFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Track"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/iv_track_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/track"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:layout_anchor="@+id/app_bar_layout"
                app:layout_anchorGravity="center"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Track Title"
                android:textSize="32sp"
                android:textColor="@color/gentle_white"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginStart="24dp"
                android:layout_marginVertical="@dimen/defaultMargin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline_track_basic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_duration"
                app:layout_constraintHorizontal_bias="0.0"/>

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2:05"
                android:textSize="20sp"
                android:textColor="@color/gentle_white"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline_track_basic"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/iv_explicit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/explicit"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/defaultMargin"
                android:contentDescription="@string/explicit_image" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_track_basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <TextView
                android:id="@+id/tv_artist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_artist_title"
                android:textSize="22sp"
                android:textColor="@color/light_green"
                android:layout_marginStart="@dimen/defaultMargin"
                app:layout_constraintTop_toTopOf="@id/guideline_track_basic"
                app:layout_constraintBottom_toTopOf="@id/item_artist"
                app:layout_constraintStart_toStartOf="parent" />

            <include layout="@layout/item_artist"
                android:id="@+id/item_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/tv_artist_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline_artist_basic"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_artist_basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.30" />

            <TextView
                android:id="@+id/tv_album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_from_album"
                android:textSize="22sp"
                android:textColor="@color/light_green"
                android:layout_marginStart="@dimen/defaultMargin"
                app:layout_constraintTop_toTopOf="@id/guideline_artist_basic"
                app:layout_constraintBottom_toTopOf="@id/item_album"
                app:layout_constraintStart_toStartOf="parent" />

            <include layout="@layout/item_album"
                android:id="@+id/item_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/tv_album_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline_album_basic"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_album_basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.45" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_listen_in_spotify_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listen_in_spotify"
                android:fontFamily="@font/inter_medium"
                style="@style/MaterialButton.Icon36dp"
                android:backgroundTint="@color/dak_green"
                app:icon="@drawable/spotify_icon_black"
                app:iconGravity="start"
                app:layout_constraintTop_toBottomOf="@id/guideline_album_basic"
                app:layout_constraintBottom_toTopOf="@id/guideline_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.55" />

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_details"
                android:textSize="22sp"
                android:textColor="@color/light_green"
                android:layout_marginStart="@dimen/defaultMargin"
                app:layout_constraintTop_toTopOf="@id/guideline_button"
                app:layout_constraintBottom_toTopOf="@id/item_chart"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_tempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Tempo: 144.3"
                android:layout_marginVertical="8dp"
                android:textSize="22sp"
                android:textColor="@color/gentle_white"
                android:layout_marginStart="@dimen/defaultMargin"
                app:layout_constraintTop_toBottomOf="@id/tv_details_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_key"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <TextView
                android:id="@+id/tv_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Key: C#"
                android:textSize="22sp"
                android:textColor="@color/gentle_white"
                android:layout_marginStart="@dimen/defaultMargin"
                app:layout_constraintTop_toTopOf="@id/tv_tempo"
                app:layout_constraintStart_toEndOf="@id/tv_tempo"
                app:layout_constraintEnd_toEndOf="parent"/>

            <include layout="@layout/item_chart"
                android:id="@+id/item_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultMargin"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_tempo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
